[package]
name = "load-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0"}
serde_derive = "1.0"
custom_derive = "0.1.7"

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = "0.11.18"
http = "0.2.9"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]